--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ numpy==1.23.3
 pandas==1.4.4
 pandas_profiling==3.3.0
 streamlit==1.12.2
+streamlit_lottie==0.0.3
 streamlit_pandas_profiling==0.1.3
-Jinja2==3.0.3
